--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cloud_firestore: ^0.12.9+5
   google_sign_in: ^4.1.1
   flutter_signin_button: ^1.0.0
+  flutter_speed_dial: ^1.2.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
